# regulatory-rag

./: .env.example  .gitignore  README.md  pyproject.toml
docker/: docker-compose.yml
scripts/: hello_rag.py
