[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regulatory-rag"
version = "0.1.0"
description = "Sistema RAG avanzado para regulación financiera mexicana"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Tu Nombre", email = "tu@email.com"}]
dependencies = [
    "qdrant-client>=1.12.0",
    "ollama>=0.4.0",
    "sentence-transformers>=3.3.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "ipykernel>=6.29.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
